[gd_scene load_steps=3 format=3 uid="uid://1uvvk2vtl6xa"]

[ext_resource type="Script" path="res://Game/Board/AStarTileMap.gd" id="1"]
[ext_resource type="TileSet" uid="uid://5wuo6va1nom8" path="res://Assets/Tilesets/DrawnTileset/DrawnTileset.tres" id="2"]

[node name="Board" type="TileMap"]
tile_set = ExtResource("2")
format = 2
script = ExtResource("1")

[node name="MovementBoard" type="TileMap" parent="."]
tile_set = ExtResource("2")
format = 2

[node name="SpellsRangeBoard" type="TileMap" parent="."]
tile_set = ExtResource("2")
format = 2

[node name="SpellsAreaBoard" type="TileMap" parent="."]
tile_set = ExtResource("2")
format = 2
